--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,31 @@
 {
   "name": "backend",
-  "module": "index.ts",
+  "main": "dist/server.js",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "tsx src/prisma/seed.ts"
   },
+  "prisma": {
+    "seed": "tsx src/prisma/seed.ts"
+  },
   "devDependencies": {
-    "@types/bun": "latest",
     "@types/express": "^5.0.5",
-    "ts-node-dev": "^2.0.0",
+    "@types/node": "^24.10.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@types/node": "^24.10.1",
+    "@prisma/client": "5.22.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "prisma": "^5.22.0",
+    "prisma": "5.22.0",
     "zod": "^4.1.13"
   }
 }
